--- a/Lua5.1
+++ b/Lua5.1
@@ -1,1 +1,4 @@
-https://cdn.discordapp.com/attachments/654857154188017687/679849124803510290/Lua5.1.dll
+https://cdn.discordapp.com/attachments/469831501215694852/679321958902398980/EasyExploitsDLL.dll
+true
+version-29c070a3f8e1438d
+https://cdn.discordapp.com/attachments/469831501215694852/679647457688551476/EasyExploitsDLL.dll
